<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" 
  android:title="@string/SMSSecurity_Settings_Title" 
  android:key="@string/KEY_SMSSecuritySETTING">
    <PreferenceCategory 
        android:title="@string/ServiceState_CheckBox_Text" 
        android:key="@string/KEY_ServiceState">
        <CheckBoxPreference 
              android:summaryOn="@string/ServiceState_CheckBox_Running" 
              android:key="@string/KEY_ServiceState_CheckBox" 
              android:summaryOff="@string/ServiceState_CheckBox_Stop" 
              android:title="@string/ServiceState_CheckBox_Text" 
              android:selectable="false" 
              android:enabled="false">
         </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/ServiceNumber_Title" 
        android:key="@string/KEY_ServiceNumber_PRF">
        <EditTextPreference 
             android:key="@string/KEY_ServiceNumber_Editor" 
             android:title="@string/ServiceNumber_Editor_TEXT" 
             android:selectable="false" android:enabled="false">
         </EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/TimeSettings_Title" 
        android:key="@string/KEY_TimeSettings_PRF">
        <ListPreference 
             android:key="@string/KEY_BottTime" 
             android:title="@string/BootTime_Text" 
             android:entries="@array/boottime" 
             android:entryValues="@array/boottimevalue" 
             android:enabled="false" 
             android:selectable="false">
        </ListPreference>
        <ListPreference 
             android:key="@string/KEY_CallTime" 
             android:title="@string/CallTime_Text" 
             android:entries="@array/calltime" 
             android:entryValues="@array/calltimevalue" 
             android:enabled="false" 
             android:selectable="false">
        </ListPreference>
        <ListPreference 
             android:key="@string/KEY_OnceCallTime" 
             android:title="@string/OnceCallTime_Text" 
             android:entries="@array/oncecalltime" 
             android:entryValues="@array/oncecalltimevalue" 
             android:enabled="false" 
             android:selectable="false">
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/Content_Title" 
        android:key="@string/KEY_Content_PRF">
        <!-- <Preference android:title="@string/Content_text" android:key="@string/KEY_Content" android:enabled="false" android:selectable="false"></Preference>-->
        <ListPreference 
             android:key="@string/KEY_Prefix_01" 
             android:title="@string/Prefix_01" 
             android:entries="@array/prefix01" 
             android:entryValues="@array/prefix01value" 
             android:enabled="false" 
             android:selectable="false">
        </ListPreference>
        <ListPreference 
             android:key="@string/KEY_Prefix_02" 
             android:title="@string/Prefix_02" 
             android:entries="@array/prefix02" 
             android:entryValues="@array/prefix02value" 
             android:enabled="false" 
             android:selectable="false">
        </ListPreference>
        <ListPreference 
             android:key="@string/KEY_Prefix_03" 
             android:title="@string/Prefix_03"
             android:entries="@array/prefix03" 
             android:entryValues="@array/prefix03value" 
             android:enabled="false" 
             android:selectable="false">
        </ListPreference>
        <Preference 
             android:title="@string/IMEI_Number" 
             android:selectable="false" 
             android:enabled="false" 
             android:key="@string/KEY_IMEI_Number">
        </Preference>
        <Preference 
             android:title="@string/MainBroad_Number" 
             android:selectable="false" 
             android:enabled="false" 
             android:key="@string/KEY_MainBroad_Number">
        </Preference>
        <Preference 
             android:title="@string/SoftWare_Version" 
             android:selectable="false" 
             android:enabled="false" 
             android:key="@string/KEY_SoftWare_Version">
        </Preference>
    </PreferenceCategory>
    
</PreferenceScreen>
